--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Source/BP/Settings/CustomGameInstanceBP.CustomGameInstanceBP_C
 GameDefaultMap=/Game/Source/Maps/Test.Test
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Source/BP/Settings/DefaultGameModeBP.DefaultGameModeBP_C
