--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,8 +3,30 @@ ProjectID=(A=1823396784,B=1298598689,C=1743498150,D=-2048051708)
 ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=5F65C91140AE3C5F075253AB6EE1E34A
+CompanyName=
+CompanyDistinguishedName=
+CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
+Description=
+Homepage=
+LicensingTerms=
+PrivacyPolicy=
+ProjectID=0FB2E3A9485800A97098639AB7E073EB
+ProjectName=
+ProjectVersion=1.0.0.0
+SupportContact=
+ProjectDisplayedTitle=
+ProjectDebugTitleInfo=
+bShouldWindowPreserveAspectRatio=True
+bUseBorderlessWindow=False
+bStartInVR=False
+bAllowWindowResize=True
+bAllowClose=True
+bAllowMaximize=True
+bAllowMinimize=True
+EyeOffsetForFakeStereoRenderingDevice=0.032000
+FOVForFakeStereoRenderingDevice=100.000000
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
